--- a/templates/index.html
+++ b/templates/index.html
@@ -11,20 +11,28 @@
 </head>
 
 <body onload="checkCheckboxesChecked()" id="body">
+
   <header id="masthead" class="site-header">
-		<div class="site-header-wrapper">
-			<div class="site-branding">
-				<p class="site-title"><a href="http://canographia.datagora.erasme.org/" rel="home"><img src="http://canographia.datagora.erasme.org/wp-content/themes/canographia/assets/canographia-logo.svg" title="Canographia" alt="Canographia" id="retourCanographia"></a></p>
-			</div>
+    <div class="site-header-wrapper">
+      <div class="site-branding">
+        <p class="site-title"><a href="http://canographia.datagora.erasme.org/" rel="home"><img src="http://canographia.datagora.erasme.org/wp-content/themes/canographia/assets/canographia-logo.svg" title="Canographia" alt="Canographia" id="retourCanographia"></a></p>
+      </div>
+      <div class="site-logo">
+        <img src="static/CSS/images/canographia-logo-svg.svg" id="logo-site">
+      </div>
     </div>
       <div id="titredePage">
         Pages Vertes
       </div>
-	</header>
+  </header>
 
-  <div>
+  <div id="realBody">
     <div id="map"></div>
-    <fieldset id="check">
+    <input type="button" value="R&eacute;initialiser les filtres" id="boutonReinit" class="notMap">
+    <div id="searchInput" class="notMap">
+      <input id="input-acteur" type="text" autocomplete="off" value="Adresse ou nom d'acteur">
+    </div>
+    <fieldset id="check" class="notMap">
       <legend>Signataires ou pas?</legend>
 
       <div>
@@ -33,23 +41,39 @@
       </div>
   </fieldset>
 
-  <fieldset id="check2">
+  <fieldset id="check2" class="notMap">
     <legend>Elague ta recherche !</legend>
   <!--La il faudrait ajouter avec le javascript automatiquement les filtres que l'on veut ajouter-->
-
   </fieldset>
+  <div id="result">
 
-  <input type="button" value="R&eacute;initialiser les filtres" id="boutonReinit">
-  <div id="result"></div>
   </div>
 
-
+  <footer id="footer">
+    <div class="site-footer-wrapper">
+      <img src="./static/CSS/images/footer_acteur_final.png" id="logosFooter">
+    </div>
+  </footer>
+</div>
 </body>
 
 
 <script>
     var map = L.map('map').setView([45.757814,4.832011], 13);
+    /*
+    Autres tuiles
+    https://cartodb-basemaps-{s}.global.ssl.fastly.net/light_all/{z}/{x}/{y}.png
+    http://{s}.tile.osm.org/{z}/{x}/{y}.png
+    
+    */
+   /*
     L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
     attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
-    }).addTo(map);
+    }).addTo(map);*/
+
+    var OpenStreetMap_HOT = L.tileLayer('https://{s}.tile.openstreetmap.fr/hot/{z}/{x}/{y}.png', {
+    maxZoom: 19,
+    attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, Tiles style by <a href="https://www.hotosm.org/" target="_blank">Humanitarian OpenStreetMap Team</a> hosted by <a href="https://openstreetmap.fr/" target="_blank">OpenStreetMap France</a>'
+    });
+    OpenStreetMap_HOT.addTo(map);
 </script>
