--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -1,4 +1,15 @@
-button, input[type="submit"], input[type="reset"], input[type="button"] {
+/* CSS for search bar */
+
+.form-container form {
+    position: fixed;
+    top: 7vh;
+    left: 30vw;
+    background-color: white;
+    border-radius: 15px;
+    display: flex;
+}
+
+input[type="submit"], input[type="reset"], input[type="button"] {
 	background: none;
 	color: inherit;
 	border: none;
@@ -145,7 +156,7 @@ h2{
     height: 2vh;
     background: url(./images/rough-x-white.svg) repeat-x transparent;
 }
-
+/*
 #titredePage{
     position: absolute;
     top: 0;
@@ -158,9 +169,23 @@ h2{
     justify-content: center;
     font-size: 6vmin;
 }
+*/
+
+#titreDePage{
+    display: flex;
+    flex-direction: row;
+    width: inherit;
+    justify-content: center;
+    align-items: center;
+}
+
+#titreDePage h1 {
+    font-size: 2vmax;
+}
 
 #logo-site{
-    max-width: 7vmin;
+    max-width: 3vmax;
+    max-height: 3vmax;
     z-index: 1002;
 }
 
@@ -183,16 +208,20 @@ h2{
     margin-right: 1vw;
     font-size: 1.5vmin;
     right: 5vw;
-    top: 20vh;
+    top: 7vh;
+    width: 30vw;
+    display: flex;
+    flex-direction: column;
 }
 
 #divresult{
     padding-left: 2vw;
     padding-right: 2vw;
+    width: inherit;
 }
 
 .dataToDisplay {
-    font-size: calc(15px + 0.5vmin);
+    font-size: calc(10px + 0.5vmax);
     text-align: center;
 }
 
@@ -218,10 +247,11 @@ h2{
 }
 
 #titreNom{
-    font-size: calc(15px + 1.5vmax);
+    font-size: calc(10px + 1.5vmax);
     font-family: 'Eczar', arial;
-    line-height: 4vh;
+    line-height: 40px;
     text-align: center;
+    margin: 3vh 0 2vh 0;
 }
 
 .lienWeb {
@@ -283,6 +313,63 @@ h1{
     padding: 1%;
 }
 
+.filtreDeroule {
+    max-height: 0;
+    animation: deroule 2s ease forwards;
+}
+
+@keyframes deroule {
+    0%{opacity: 0; display: flex;}
+    100%{max-height: 100vh;}
+}
+
+.filtreRemballe {
+    max-height: 100vh;
+    animation: remballe 0.5s ease forwards;
+}
+
+#iconeCharte {
+    max-width: 50px;
+    max-height: 50px;
+}
+
+@keyframes remballe {
+    0%{max-height: 100vh;}
+    100%{max-height: 0; opacity: 0; display: none }
+}
+
+.ouvertureResult {
+    animation: ouvertureResult 500ms ease-in forwards;
+}
+
+@keyframes ouvertureResult {
+    0% {max-width: 0; max-height: 0; opacity: 0;}
+    100% {max-width: 100vw; max-height: 100vh; opacity: 1;}
+}
+
+.fermetureResult {
+    animation: fermetureResult 500ms ease-out forwards;
+}
+
+@keyframes fermetureResult {
+    0%{max-width: 100vw; max-height: 100vh; opacity: 1;}
+    100%{max-width: 0; max-height: 0; opacity: 0;}
+}
+
+/* Gestion de l'opacité du marker au hover*/
+.markerHovered {
+    transform: opacity(1);
+    transition-property: transform;
+    transition-duration: 1s;
+    &:hover {
+        transform: scale(1.15);
+    }
+}
+
+.markerHovered {
+    opacity: 0;
+}
+
 #divContainer{
     width: 90%;
     height: fit-content;
@@ -311,6 +398,7 @@ h1{
     color: #FFFFFF;
     font-style: italic;
     font-weight: 100;
+    font-size: calc(5px + 0.5vmax);
 }
 
 .iconCharteData {
@@ -376,7 +464,7 @@ label{
 
 /* Style des checkboxes*/
 
-#checkboxes {
+.checkboxes {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -390,7 +478,7 @@ label{
 
 .container {
     cursor: pointer;
-    display: block;
+    display: flex;
     position: relative;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -401,7 +489,7 @@ label{
     color: #000000;
     font-family: 'Pragmatica';
     font-weight: 200;
-    font-size: 1vmax;
+    font-size: calc(7px + 0.5vmax);
   
     opacity: 0.65;
 }
@@ -447,6 +535,13 @@ label{
   /* Show the checkmark when checked */
 .container input:checked ~ .checkmark:after {
     display: block;
+}
+
+.popupOnHover {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
   
 /* Style the checkmark/indicator */
@@ -520,16 +615,17 @@ label{
 .leaflet-control {
     position: fixed;
     top: 80vh;
+    left: 97vw;
 }
 
 #gdDiv {
-    width: 25vw;
+    width: 20vw;
     display: flex;
     flex-direction: column;
     justify-content: start;
     align-items: center;
     position: fixed;
-    top: 20vh;
+    top: 7vh;
     background-color: white;
     border-radius: 10px;
     border: 1px solid rgb(196,196,196);
@@ -537,7 +633,7 @@ label{
     padding-bottom: 10px;
     padding-left: 5px;
     padding-right: 5px;
-    margin-left: 1vw;
+    margin-left: 5vw;
 }
 
 #reinit {
@@ -612,10 +708,10 @@ label{
 
 @media screen and (min-width: 1920px) {
     .deroulant {
-        font-size: calc(15px + 0.5vh);
+        font-size: calc(12px + 0.5vh);
     }
     .container {
-        font-size: calc(15px + 0.5vh);
+        font-size: calc(12px + 0.5vh);
     }
     .checkmark {
         height: 2vh;
