--- a/templates/index.html
+++ b/templates/index.html
@@ -1,112 +1,110 @@
 <head>
-    <meta charset="UTF-8">
-    <title>Pages Vertes</title>
-    <script src="static/JS/leaflet.js"> // insertion bibliothèque Leaflet : http://leafletjs.com/ </script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Eczar&family=Open+Sans:wght@300&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="static/CSS/style.css">
-    <link rel="stylesheet" type="text/css" href="static/CSS/leaflet.css" />
-    <link href='https://fonts.googleapis.com/css?family=Eczar' rel='stylesheet'>
+  <meta charset="UTF-8">
+  <title>Pages Vertes</title>
+  <script src="static/JS/leaflet.js"> // insertion bibliothèque Leaflet : http://leafletjs.com/ </script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Eczar&family=Open+Sans:wght@300&display=swap" rel="stylesheet"> 
+  <link rel="stylesheet" href="static/CSS/style.css">
+  <link rel="stylesheet" type="text/css" href="static/CSS/leaflet.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Maitree:wght@200;300;400;500;600;700&family=Palanquin:wght@100;200;300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> 
 
-    <!-- Chargement du plugin mapbox pour intégrer le fond de carte de canographia -->
-    <script src='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.js'></script>
-    <link href='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.css' rel='stylesheet' />
+  <!-- Chargement du plugin mapbox pour intégrer le fond de carte de canographia -->
+  <script src='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.js'></script>
+  <link href='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.css' rel='stylesheet' />
+
+  <!-- Chargement du plugin qui permet d'avoir des icônes -->
+  <script src="https://code.iconify.design/iconify-icon/1.0.0-beta.3/iconify-icon.min.js"></script>
+
+  <!--loading Javascript index-->
+  <script src="static/JS/index.js" defer></script>
 </head>
 
+
 <body id="body">
-  <!--
-  <header id="masthead" class="site-header">
-    <div class="site-header-wrapper">
-      <div class="site-branding">
-        <p class="site-title"><a href="http://canographia.datagora.erasme.org/" rel="home"><img src="http://canographia.datagora.erasme.org/wp-content/themes/canographia/assets/canographia-logo.svg" title="Canographia" alt="Canographia" id="retourCanographia"></a></p>
+<!--
+<header id="masthead" class="site-header">
+  <div class="site-header-wrapper">
+    <div class="site-branding">
+      <p class="site-title"><a href="http://canographia.datagora.erasme.org/" rel="home"><img src="http://canographia.datagora.erasme.org/wp-content/themes/canographia/assets/canographia-logo.svg" title="Canographia" alt="Canographia" id="retourCanographia"></a></p>
+    </div>
+  </div>
+    <div id="titredePage">
+      <div class="site-logo">
+        <img src="static/CSS/images/canographia-logo-svg.svg" id="logo-site">
+      </div>
+      <div>
+        Pages Vertes
       </div>
     </div>
-      <div id="titredePage">
-        <div class="site-logo">
-          <img src="static/CSS/images/canographia-logo-svg.svg" id="logo-site">
-        </div>
-        <div>
-          Pages Vertes
-        </div>
-      </div>
-  </header>
+</header>
 -->
 
-    <div id="bandeauIntro">
-    </div>
-    <div id="map"></div>
-    <div id="gdDiv">
-      <div id="titreDePage">
-        <img src="static/CSS/images/canographia-logo-svg.svg" id="logo-site">
-        <h1>Pages Vertes</h1>
-      </div>
-      <div id="divContainer">
-        <div id="check" class="notMap">
-          <button class="LegendeFiltres deroulant"><span><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-right" class="svg-inline--fa fa-chevron-right " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path fill="currentColor" d="M96 480c-8.188 0-16.38-3.125-22.62-9.375c-12.5-12.5-12.5-32.75 0-45.25L242.8 256L73.38 86.63c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l192 192c12.5 12.5 12.5 32.75 0 45.25l-192 192C112.4 476.9 104.2 480 96 480z"></path></svg></span> Labels et engagements éthiques</button>
-          <div class="checkboxes notMap divCheckbox" style="display: none;">
-            <label class="container"><input type="checkbox" id="checkboxCharte">
-              Signataires de la Charte de l'arbre
-              <img src="static/CSS/images/iconeCharte.png" alt="iconeCharte" id="iconeCharte">
-              <span class="checkmark"></span>
-            </label>
-            <label class="container"><input type="checkbox" id="checkboxVegetalLocal">
-              Vegetal Local
-              <img src="static/CSS/images/iconeCharte.png" alt="iconeCharte" id="iconeCharte">
-              <span class="checkmark"></span>
-            </label>
-            <label class="container"><input type="checkbox" id="checkboxPlanteBleue">
-              Plante Bleue
-              <img src="static/CSS/images/iconeCharte.png" alt="iconeCharte" id="iconeCharte">
-              <span class="checkmark"></span>
-            </label>
-          </div>
-        </div>
-
-        <div id="check2" class="notMap">
-          <button class="LegendeFiltres deroulant"><span><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-right" class="svg-inline--fa fa-chevron-right " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path fill="currentColor" d="M96 480c-8.188 0-16.38-3.125-22.62-9.375c-12.5-12.5-12.5-32.75 0-45.25L242.8 256L73.38 86.63c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l192 192c12.5 12.5 12.5 32.75 0 45.25l-192 192C112.4 476.9 104.2 480 96 480z"></path></svg></span> J'ai besoin de</button>
-        <!--La il faudrait ajouter avec le javascript automatiquement les filtres que l'on veut ajouter-->
-        </div>
-      </div>
-      <div class="notMap" style="border-bottom: none">
-        <div style="display: flex" id="liensTelechargement">
-          <div id="downloadCSV" class="downloadButton"><div class="telechargement"><img src="static/CSS/images/download_csv.png" alt="download_csv" class="download_picto"></div></div>
-          <div id="downloadPDF" class="downloadButton"><div class="telechargement"><img src="static/CSS/images/download_pdf.png" alt="download_pdf" class="download_picto"></div></div>
-        </div>
-      </div>
-      <div id="reinit">R&eacute;initialiser les filtres</div>
-    </div>
-  <div id="result" style="display: none;">
-    <!-- <h1 style="font-size: 3vmin; padding: 10%;">S&eacute;lectionner un acteur sur la carte</h1> -->
+  <div id="bandeauIntro">
   </div>
-  <!--
+  <div id="map"></div>
+  <div id="bigContainer">
+    <div id="titreDePage">
+      <img src="static/CSS/images/canographia-logo-svg.svg" id="logo-site">
+      <h1>Pages Vertes</h1>
+    </div>
+    <div id="checkContainer">
+      <div id="check2">
+        <button class="derouleurCheckboxes"><span><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-right" class="svg-inline--fa fa-chevron-right " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path fill="currentColor" d="M96 480c-8.188 0-16.38-3.125-22.62-9.375c-12.5-12.5-12.5-32.75 0-45.25L242.8 256L73.38 86.63c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l192 192c12.5 12.5 12.5 32.75 0 45.25l-192 192C112.4 476.9 104.2 480 96 480z"></path></svg></span><div class="titreDerouleur">J'ai besoin de</div></button>
+      <!--La il faudrait ajouter avec le javascript automatiquement les filtres que l'on veut ajouter-->
+      </div>
+      <div id="check">
+        <button class="derouleurCheckboxes"><span><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-right" class="svg-inline--fa fa-chevron-right " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path fill="currentColor" d="M96 480c-8.188 0-16.38-3.125-22.62-9.375c-12.5-12.5-12.5-32.75 0-45.25L242.8 256L73.38 86.63c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l192 192c12.5 12.5 12.5 32.75 0 45.25l-192 192C112.4 476.9 104.2 480 96 480z"></path></svg></span><div class="titreDerouleur">Labels et engagements éthiques</div></button>
+        <div class="checkboxes" style="display: none;">
+          <label for="checkboxCharte" class="checkboxContainer">
+            <input type="checkbox" id="checkboxCharte">
+            <div class="checkboxText">Signataires de la Charte de l'arbre</div>
+            <img src="static/CSS/images/iconeCharte.png" alt="iconeCharte" id="iconeCharte">
+            <span class="checkmark"></span>
+          </label>
+          <label for="checkboxVegetalLocal" class="checkboxContainer">
+            <input type="checkbox" id="checkboxVegetalLocal">
+            <div class="checkboxText">Marque Vegetal Local</div>          
+            <span class="checkmark"></span>
+          </label>
+          <label for="checkboxPlanteBleue" class="checkboxContainer">
+            <input type="checkbox" id="checkboxPlanteBleue">
+            <div class="checkboxText">Label Plante Bleue</div>
+            <span class="checkmark"></span>
+          </label>
+        </div>
+      </div>
+
+    </div>
+    <!--
+    <div style="border-bottom: none">
+        <div id="downloadCSV"><img src="static/CSS/images/download_csv.png" alt="download_csv" class="download_picto"></div>
+        <div id="downloadPDF"><img src="static/CSS/images/download_pdf.png" alt="download_pdf" class="download_picto"></div>
+    </div>
+    <div id="reinit">R&eacute;initialiser les filtres</div>
+  </div>
+  -->
+<div id="result" style="display: none;">
+  <!-- <h1 style="font-size: 3vmin; padding: 10%;">S&eacute;lectionner un acteur sur la carte</h1> -->
+</div>
+<!--
 <footer id="footer">
-  <img src="./static/CSS/images/footer_acteur_final.png" id="logosFooter">
+<img src="./static/CSS/images/footer_acteur_final.png" id="logosFooter">
 </footer>
 </body>
 -->
-  <div id="search-bar-container">
-    <div class="form-container">
-      <form action="" class="form">
-          <input type="text" name="" id="inputSearchBar" placeholder="search...">
-          <button id="clear" class="clear-results">clear</button>
-      </form>
-    </div>
-    <div class="results-container">
-      <ul class="results-list" id="list">
 
-      </ul>
-    </div>
-  </div>
 
 
 <script>
-    L.mapbox.accessToken = 'pk.eyJ1IjoiYWFuZ2Vsb3QiLCJhIjoiY2twbXQ3aXl5MDUzbDJ2cDRtdTJoMjlvbyJ9.XlluG8Wj1k_QsGstSd62xA';
-    var map = L.map('map').setView([45.757814,4.832011], 13);
+  L.mapbox.accessToken = 'pk.eyJ1IjoiYWFuZ2Vsb3QiLCJhIjoiY2twbXQ3aXl5MDUzbDJ2cDRtdTJoMjlvbyJ9.XlluG8Wj1k_QsGstSd62xA';
+  var map = L.map('map').setView([45.757814,4.832011], 13);
 
-    var OpenStreetMap_HOT = L.tileLayer('https://api.mapbox.com/styles/v1/aangelot/cl38wmscs000214o6biff2xj0/tiles/{z}/{x}/{y}?access_token=' + L.mapbox.accessToken, {
-    maxZoom: 19,
-    });
-    OpenStreetMap_HOT.addTo(map);
+  var OpenStreetMap_HOT = L.tileLayer('https://api.mapbox.com/styles/v1/aangelot/cl38wmscs000214o6biff2xj0/tiles/{z}/{x}/{y}?access_token=' + L.mapbox.accessToken, {
+  maxZoom: 19,
+  });
+  OpenStreetMap_HOT.addTo(map);
 </script>
